Fix Alignment

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ img {
   .navbar {
     background: #fff;
     box-shadow: 0 5px 20px rgba(0,0,0,0.1);
-    height: 80px;
+    height: 90px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -89,7 +89,7 @@ img {
   .navbar__container {
     display: flex;
     justify-content: space-between;
-    height: 80px;
+    height: 90px;
     z-index: 1;
     width: 100%;
     /*max-width: 1100px;*/
@@ -102,10 +102,16 @@ img {
   .logo {
     display: flex;
     align-items: center;
-  }
-  .logo img {
+    position: relative;
     width: 200px;
     height: 100px;
+  }
+  .logo img {
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
   }
   /*.navbar__logo img {
@@ -125,7 +131,7 @@ img {
     align-items: center;
     text-align: center;
   }
-  .navbar__item { height: 80px; padding-right: 40px; }
+  .navbar__item { height: 90px; padding-right: 40px; }
   .navbar__links {
     height: 100%;
     padding: 0rem 0rem;
